--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "include-all": "~0.1.6",
     "rc": "1.0.1",
     "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "^5.0.0-rc.1",
     "sails": "~0.12.4",
     "sails-disk": "~0.10.9",
     "systemjs": "0.19.27",
+    "typescript": "^2.1.5",
     "zone.js": "^0.6.23"
   },
   "scripts": {
